Modified lightbox image to fix layout issue. Added max-width property to img-box__img class.

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,7 @@ main {
 }
 
 .img-box__img {
+  max-width: 625px;
   width: 70%;
 }
 
@@ -301,7 +302,6 @@ main {
 }
 
 /* toggles */
-
 .active {
   color: var(--dark-grey);
 }
